institute and degree box changed

--- a/index.html
+++ b/index.html
@@ -413,13 +413,46 @@
                                 </div>
                             </div>
 
+
+
+
+
+
+
                             <div class="input-type-block mb-3">
                                 <h6>
                                     <span class="lebel-text"
                                         ><span>*</span>Educational Status</span
                                     >
                                 </h6>
-                                <div class="row">
+
+                                <div class="mb-3">
+                                    <label for="degree" class="input-label">
+                                        <span>*</span>Degree</label
+                                    >
+                                    <input
+                                    type="text"
+                                    name="degree"
+                                    class="form-control"
+                                    id="degree"
+                                    placeholder="e.g. BSC in CSE"
+                                    required
+                                    />
+                                </div>
+                                <div class="mb-3">
+                                    <label for="institute" class="input-label">
+                                        <span>*</span>Institute</label
+                                    >
+                                    <input
+                                    type="text"
+                                    name="institute"
+                                    class="form-control"
+                                    id="institute"
+                                    placeholder="e.g. Oxford University"
+                                    required
+                                    />
+                                </div>
+                                <!-- <div class="row">
                                     <div class="row2">
                                         <div class="col-sm-6 p-sm-0">
                                             <div class="form-group">
@@ -459,7 +492,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
 
                             <!-- ---------------yes /no ---------------- -->
